<resources>
    <string name="app_name">Calculator</string>
    <string name="button_all_clean" translatable="false">AC</string>
    <string name="button_percent" translatable="false">%</string>
    <string name="button_division" translatable="false">÷</string>
    <string name="button_seven" translatable="false">7</string>
    <string name="button_eight" translatable="false">8</string>
    <string name="button_nine" translatable="false">9</string>
    <string name="button_multiplication" translatable="false">*</string>
    <string name="button_four" translatable="false">4</string>
    <string name="button_five" translatable="false">5</string>
    <string name="button_six" translatable="false">6</string>
    <string name="button_subtraction" translatable="false">-</string>
    <string name="button_one" translatable="false">1</string>
    <string name="button_two" translatable="false">2</string>
    <string name="button_three" translatable="false">3</string>
    <string name="button_addition" translatable="false">+</string>
    <string name="button_dot" translatable="false">.</string>
    <string name="button_zero" translatable="false">0</string>
    <string name="button_equal" translatable="false">=</string>
</resources>